# purebred-email

./: .mailmap  .travis.yml  CHANGELOG.md  README.rst  cabal.project  ghc-purebred-email.spec  purebred-email.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
src/Data/: IMF.hs  IMF.hs-boot  MIME.hs  RFC5322.hs
src/Data/IMF/: DateTime.hs  Internal.hs  Syntax.hs  Text.hs  Text.hs-boot
src/Data/IMF/Address/: Text.hs  Text.hs-boot  Types.hs  Types.hs-boot
src/Data/MIME/: Base64.hs  Boundary.hs  Charset.hs  EncodedWord.hs  Error.hs  Internal.hs  Parameter.hs  QuotedPrintable.hs  TransferEncoding.hs  Types.hs
src/Data/RFC5322/: DateTime.hs  Internal.hs
src/Data/RFC5322/Address/: Text.hs  Text.hs-boot  Types.hs  Types.hs-boot
test-vectors/: multipart-alternative.eml  multipart-digest.eml  multipart-no-body.eml  nested-multipart.eml
tests/: ContentTransferEncodings.hs  EncodedWord.hs  Generator.hs  Headers.hs  MIME.hs  Message.hs  Parser.hs  Test.hs
tests/golden/: multipart.golden  textplain7bit.golden
tools/: Parse.hs
